# ChiselEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: constant.hpp
include/glad/: gl.h  glad.h
src/: Makefile  driver.cpp  main.cpp  results.txt
src/entities/: player.cpp  player.hpp
src/gl_utils/: ebo.cpp  ebo.hpp  shader_program.cpp  shader_program.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/include/: camera.hpp  constant.hpp  constants.hpp  shader_loader.hpp  window_loader.hpp
src/init/: chisel.cpp  chisel.hpp  debug_output.cpp  debug_output.hpp  engine_constants.hpp  gl_constants.cpp  gl_constants.hpp  shader.cpp  shader.hpp  video.cpp  video.hpp
src/loader/: shader_loader.cpp  window_loader.cpp
src/player/: camera.cpp
src/resources/: block_definition.json
src/resources/shader/: default.vs
src/resources/shaders/: chunk.frag  chunk.vert  crosshair.frag  crosshair.vert  cubemesh.frag  cubemesh.vert  default.frag  screen.frag  screen.vert
src/temp/: chunk_manager.hpp
src/util/: block_textures.cpp  block_textures.hpp  camera.cpp  camera.hpp  colors.cpp  colors.hpp  coreutils.hpp  debug_window.cpp  debug_window.hpp  ebo.cpp  ebo.hpp  framebuffer.cpp  framebuffer.hpp  mesh.cpp  mesh.hpp  shader_program.cpp  shader_program.hpp  ubo_view_projection.cpp  ubo_view_projection.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
src/voxel/: aabb.cpp  aabb.hpp  block.cpp  block.hpp  block_registry.cpp  block_registry.hpp  blocktype_enum.hpp  chunk.cpp  chunk.hpp  chunk_mesh.cpp  chunk_mesh.hpp  chunk_pool.cpp  chunk_pool.hpp  conversions.cpp  conversions.hpp  cubemesh.cpp  cubemesh.hpp  direction.hpp  face_id.hpp  proc_gen.cpp  proc_gen.hpp  ray_casting.cpp  ray_casting.hpp  vertex.cpp  vertex.hpp  voxel_handler.cpp  voxel_handler.hpp  voxel_id.hpp  voxel_math.cpp  voxel_math.hpp  world.cpp  world.hpp
